fix images, font, link and favicon

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 
 @font-face {
     font-family: FFF Forward;
-    src: url(fonts/krunky.tff);
+    src: url(fonts/krunky.ttf);
 }
 
 table {
