--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 p {
-    font-size: 1.7vw;
+    font-size: 1.5vw;
     text-align: center;
 }
 
@@ -69,4 +69,9 @@ a:link, a:visited {
   
 a:hover, a:active {
     background-color: rgba(255, 201, 24, 0.75);
+}
+
+mark {
+    color: #E6E6E6;
+    background-color: black;
 }
